--- a/.daemonless/compose.yaml
+++ b/.daemonless/compose.yaml
@@ -15,7 +15,7 @@ services:
       - booklore-books:/books
     depends_on:
       mariadb:
-        condition: service_healthy
+        condition: service_started
 
   mariadb:
     image: ghcr.io/daemonless/mariadb:11.4
@@ -27,11 +27,6 @@ services:
       MYSQL_PASSWORD: "testpass"
     volumes:
       - mariadb-data:/config
-    healthcheck:
-      test: ["CMD", "mariadb", "-u", "booklore", "-ptestpass", "-e", "SELECT 1"]
-      interval: 5s
-      timeout: 5s
-      retries: 20
 
 volumes:
   booklore-data:
