--- a/.daemonless/compose.yaml
+++ b/.daemonless/compose.yaml
@@ -14,8 +14,7 @@ services:
       - booklore-data:/app/data
       - booklore-books:/books
     depends_on:
-      mariadb:
-        condition: service_healthy
+      - mariadb
 
   mariadb:
     image: ghcr.io/daemonless/mariadb:11.4
@@ -27,12 +26,6 @@ services:
       MYSQL_PASSWORD: "testpass"
     volumes:
       - mariadb-data:/config
-    healthcheck:
-      test: ["CMD", "mariadb", "-u", "booklore", "-ptestpass", "-e", "SELECT 1"]
-      interval: 5s
-      timeout: 5s
-      retries: 30
-      start_period: 10s
 
 volumes:
   booklore-data:
