--- a/.daemonless/config.yaml
+++ b/.daemonless/config.yaml
@@ -5,5 +5,5 @@ cit:
   mode: screenshot
   port: 6060
   wait: 120
-  health: /actuator/health
+  health: /api/v1/healthcheck
   screenshot_wait: 30
